@@ -239,6 +239,12 @@ static const char* control_cmd_PIXMA_MG5300[] = {
   NULL
 };
 
+static const char* control_cmd_PIXMA_MG3500[] = {
+/*"SetTime=20060722092503", */         /*what is this for?*/
+  "ForcePWDetection=OFF",
+  NULL
+};
+
 static const char iP4500_channel_order[STP_NCOLORS] = {1,2,3,0}; /* CMYK */
 
 static const canon_cap_t canon_model_capabilities[] =
@@ -2615,6 +2621,22 @@ static const canon_cap_t canon_model_capabilities[] =
     &canon_PIXMA_MG3100_modelist,
     &canon_PIXMA_MG3200_paperlist,
     &canon_PIXMA_MG3200_modeuselist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
+  { /* Canon PIXMA MG3500 */
+    "PIXMA MG3500", 3,          /*model, model_id*/
+    INCH(17/2), 1917,       /* max paper width and height */ /* unconfirmed */
+    10, 10, 9, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_MG2100_slotlist,
+    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_px|CANON_CAP_I|CANON_CAP_P|CANON_CAP_T|CANON_CAP_XML|CANON_CAP_BORDERLESS,0,
+    3,9, /* ESC (l and (P command lengths */
+    control_cmd_PIXMA_MG3500,  /* features: also uses CAP_T */
+    &canon_PIXMA_MG3500_modelist, /* same as MG3100 but try to use inktypes to control use of inks in inksets */
+    &canon_PIXMA_MG3200_paperlist, /* Canon Photo Hagaki changed to merely Photo Hagaki in Windows driver */
+    &canon_PIXMA_MG3500_modeuselist,/* same as MG3200 but try to use inktypes to control use of inks in inksets */
     NULL,
     NULL,
     NULL,
